Fixed jquery link

--- a/website/www/terminal.html
+++ b/website/www/terminal.html
@@ -31,7 +31,7 @@
     <p id="quotes"></p>
   </div>
 
-  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/jquery-3.4.1.min.js"></script>
 
   <script>
     quotes = [];
